--- a/learning_log/templates/learning_log/edit_entry.html
+++ b/learning_log/templates/learning_log/edit_entry.html
@@ -2,11 +2,11 @@
 {% extends "learning_log/base.html" %}
 {% block content %}
   <p><a href="{% url 'learning_log:topic' topic.id %}">{{ topic }}</a></p>
-  <p>Edit entry:</p>
+  <p>编辑记录:</p>
   <form action="{% url 'learning_log:edit_entry' topic.id %}" method='post'>
     {% csrf_token %}
     {{ form.as_p }}
-    <button name='submit'>save changes</button>
+    <button name='submit'>保存</button>
   </form>
 {% endblock content %}
 
