--- a/learning_log/templates/learning_log/index.html
+++ b/learning_log/templates/learning_log/index.html
@@ -2,16 +2,16 @@
 
 {% block header %}
   <div class='jumbotron'>
-    <h1>Track your learning.</h1>
+    <h1>开始你的日记生活.</h1>
   </div>
   {% endblock header %}
 
   {% block content %}
     <h2>
-      <a href="{% url 'users:register' %}">Register an account</a> to make your own Learning Log,and list the topics you're learning about.
+      <a href="{% url 'users:register' %}">创建一个账号</a>拥有一个属于你的个人博客，你可以新建你的个人主题。
     </h2>
     <h2>
-      Whenever you learn somthing new about a topic,make an entry summarizing what you've learned.
+      然后你可以编辑该主题下的内容，并加以修改添加到你的个人日记中。
     </h2>  
 {% endblock content %}
 
