--- a/learning_log/templates/learning_log/new_topic.html
+++ b/learning_log/templates/learning_log/new_topic.html
@@ -3,7 +3,7 @@
 
 {% load bootstrap3 %}
 {% block header %}
-  <h2>Add a new topic:</h2>
+  <h2>新增一个主题:</h2>
 {% endblock header %}
 
 {% block content %}
@@ -12,7 +12,7 @@
       {% csrf_token %}
       {% bootstrap_form form %}
       {% buttons %}
-        <button name="submit">add topic</button>
+        <button name="submit">添加</button>
       {% endbuttons %}
     </form>
 {% endblock content %}
