--- a/learning_log/templates/learning_log/topics.html
+++ b/learning_log/templates/learning_log/topics.html
@@ -2,7 +2,7 @@
 {% extends "learning_log/base.html" %}
 
 {% block header %}
-  <h1>Topics</h1>
+  <h1>主题</h1>
 {% endblock header %}
 
 {% block content %}
@@ -15,10 +15,10 @@
         </h3>
       </li>
     {% empty %}
-      <li>No topics have been added yet.</li>
+      <li>没有主题添加进来。</li>
     {% endfor %}
   </ul>
-  <h3><a href="{% url 'learning_log:new_topic' %}">Add a new topic:</a></h3>
+  <h3><a href="{% url 'learning_log:new_topic' %}">新增一个主题:</a></h3>
 
 {% endblock content %}
 
