--- a/learning_log/templates/users/register.html
+++ b/learning_log/templates/users/register.html
@@ -5,7 +5,7 @@
     {% csrf_token %}
     {{ form.as_p }}
   
-    <button name="submit">register</button>
+    <button name="submit">注册</button>
     <input type="hidden" name="next" value="{% url 'learning_log:index' %}"/>
   </form>
 
